big fix 需要修改重定义后的添加符号逻辑，以及解决语义分析的re